add a meniu for user to choose options from add interface for a basic data type from instagram file add interface that can convert json data to object implement those in likes type

--- a/Instagram-Data-Statistics/Instagram-Data-Statistics/Instagram-Data-Statistics.csproj
+++ b/Instagram-Data-Statistics/Instagram-Data-Statistics/Instagram-Data-Statistics.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="DataFromJson\BaseJsonData.cs~RF9c2a84.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
